--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=7634
 
 spring.cloud.stream.bindings.reportPositions-out-0.destination=aircraftpositions
 spring.cloud.stream.bindings.reportPositions-out-0.binder=rabbit
+
+spring.rabbitmq.host=192.168.50.93
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=rabbitmq
+spring.rabbitmq.password=password
