--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.rabbitmq.host=192.168.50.93
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbitmq
 spring.rabbitmq.password=password
+
+spring.cloud.stream.default-binder=rabbit
+
+# ??? ???????:
+logging.level.org.springframework.cloud.stream=DEBUG
+logging.level.com.example=DEBUG
