--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,40 @@
+# ????????? ??????????
 spring.application.name=planefinder-api
-
 server.port=7634
 
+# ????????? WebFlux (?????????? ????)
+spring.webflux.static-path-pattern=/**
+spring.main.web-application-type=reactive
+
+# ????????? RabbitMQ ??? Spring Cloud Stream
 spring.cloud.stream.bindings.reportPositions-out-0.destination=aircraftpositions
 spring.cloud.stream.bindings.reportPositions-out-0.binder=rabbit
+spring.cloud.stream.bindings.continuousPositionStream-out-0.destination=aircraftstream
+spring.cloud.stream.bindings.continuousPositionStream-out-0.binder=rabbit
 
 spring.rabbitmq.host=192.168.50.93
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=rabbitmq
 spring.rabbitmq.password=password
+spring.rabbitmq.connection-timeout=5000
 
 spring.cloud.stream.default-binder=rabbit
 
-# ??? ???????:
+# ????????? ??????????? RabbitMQ
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+
+# Backpressure ?????????
+spring.cloud.stream.rabbit.bindings.reportPositions-out-0.producer.max-length=1000
+spring.cloud.stream.rabbit.bindings.continuousPositionStream-out-0.producer.max-length=5000
+
+# ????????
+spring.cloud.stream.rabbit.default.request-timeout=5000
+spring.cloud.stream.rabbit.default.connection-timeout=3000
+
+# ???????????:
 logging.level.org.springframework.cloud.stream=DEBUG
 logging.level.com.example=DEBUG
+logging.level.reactor.rabbitmq=INFO
+logging.level.org.springframework.amqp=INFO
