--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.main.web-application-type=reactive
 # ????????? RabbitMQ ??? Spring Cloud Stream
 spring.cloud.stream.bindings.reportPositions-out-0.destination=aircraftpositions
 spring.cloud.stream.bindings.reportPositions-out-0.binder=rabbit
-spring.cloud.stream.bindings.continuousPositionStream-out-0.destination=aircraftstream
+spring.cloud.stream.bindings.continuousPositionStream-out-0.destination=aircraftpositions
 spring.cloud.stream.bindings.continuousPositionStream-out-0.binder=rabbit
 
 spring.rabbitmq.host=192.168.50.93
@@ -19,6 +19,9 @@ spring.rabbitmq.password=password
 spring.rabbitmq.connection-timeout=5000
 
 spring.cloud.stream.default-binder=rabbit
+
+# Function definition
+spring.cloud.function.definition=reportPositions;continuousPositionStream
 
 # ????????? ??????????? RabbitMQ
 spring.rabbitmq.listener.simple.retry.enabled=true
@@ -38,3 +41,4 @@ logging.level.org.springframework.cloud.stream=DEBUG
 logging.level.com.example=DEBUG
 logging.level.reactor.rabbitmq=INFO
 logging.level.org.springframework.amqp=INFO
+logging.level.com.example.planefinder_api=DEBUG
